--- a/r-tech/src/pages/contact.module.css
+++ b/r-tech/src/pages/contact.module.css
@@ -24,6 +24,7 @@
   margin-bottom: 16px;
 }
 
+
 .left h1 {
   font-size: 44px;
   margin-bottom: 20px;
@@ -69,10 +70,25 @@
   background: #fff;
   padding: 50px;
   border-radius: 14px;
-  box-shadow: 0 20px 40px rgba(0,0,0,0.08);
+  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.08);
   display: flex;
   flex-direction: column;
   gap: 16px;
+}
+
+.resMessageSucc {
+  font-size: 25px;
+  font-weight: bold;
+  color: green;
+}
+
+.emailMessage {
+  font-size: 18px;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.resMessageErr {
+  color: red;
 }
 
 .form input,
@@ -110,6 +126,11 @@
   opacity: 0.9;
 }
 
+.form button:disabled {
+  background-color: #9aa0b3;
+  cursor: not-allowed;
+}
+
 @media (max-width: 768px) {
 
   /* MAIN LAYOUT */
@@ -119,6 +140,11 @@
     gap: 40px;
     min-height: auto;
   }
+
+  .emailMessage {
+  font-size: 13px;
+  font-family: 'Times New Roman', Times, serif;
+}
 
   /* LEFT SIDE */
   .left {
@@ -156,6 +182,17 @@
   .form {
     padding: 30px 20px;
     border-radius: 12px;
+  }
+
+  .resMessageSucc {
+    font-size: 18px;
+    font-weight: normal;
+    color: green;
+  }
+
+  .resMessageErr {
+    color: red;
+    font-size: 12px;
   }
 
   .form input,
