--- a/r-tech/src/components/Navbar/Navbar.module.css
+++ b/r-tech/src/components/Navbar/Navbar.module.css
@@ -11,6 +11,7 @@
   left: 0;
   z-index: 999;
   border-bottom: 1px solid rgba(0, 170, 255, 0.2);
+  position: fixed;
 }
 
 /* Logo */
@@ -18,6 +19,7 @@
   font-size: 30px;
   color: white;
   font-weight: bold;
+  white-space: nowrap;
 }
 
 /* Desktop Menu */
@@ -56,7 +58,8 @@
 
 /* PRODUCTS */
 .productsItem {
-  position: relative; /* 👈 parent anchor */
+  position: relative;
+  /* 👈 parent anchor */
 }
 
 .productsBtn {
@@ -84,7 +87,7 @@
   flex-direction: column;
   min-width: 200px;
   z-index: 2000;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.8);
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.8);
   overflow: hidden;
   color: black;
 }
@@ -118,6 +121,11 @@
     z-index: 1002;
   }
 
+  .logoCenter {
+    font-size: clamp(23px, 5vw, 22px);
+  }
+
+
   .navMenu {
     position: fixed;
     top: 0;
@@ -147,7 +155,7 @@
   .menuOverlay {
     position: fixed;
     inset: 0;
-    background: rgba(0,0,0,0.55);
+    background: rgba(0, 0, 0, 0.55);
     display: none;
     z-index: 1000;
   }
